# slizzy

./: Cargo.toml
src/: args.rs  backend.rs  logger.rs  main.rs
src/args/: mod.rs  tests.rs
src/config/: config.toml  mod.rs
src/modules/: metasource.rs  mod.rs  tracksource.rs  websearch.rs
src/modules/bandcamp/: config.rs  mod.rs  scraper.rs  source.rs
src/modules/bandcamp/scraper/: mod.rs
src/modules/bandcamp/tui/: renderer.rs
src/modules/beatport/: config.rs  mod.rs  scraper.rs  source.rs
src/modules/beatport/tui/: mod.rs  renderer.rs  status.rs
src/modules/google/: config.rs  items.rs  mod.rs
src/modules/google/items/: mod.rs  tests.rs
src/modules/item/progress/: mod.rs  noprogress.rs
src/modules/music2k/: config.rs  mod.rs
src/modules/music2k/source/: mod.rs  scraper.rs
src/modules/music2k/tui/: renderer.rs  reporter.rs  status.rs
src/modules/slider/: config.rs  mod.rs
src/modules/slider/source/: audios.rs  mod.rs  scraper.rs
src/modules/slider/tui/: mod.rs  renderer.rs  status.rs
src/modules/zippy/: config.rs  mod.rs
src/modules/zippy/source/: mod.rs  scraper.rs
src/modules/zippy/tui/: mod.rs  (+3 more)
src/net/: mod.rs
src/net/http/: downloader.rs  mod.rs  request.rs  response.rs
src/net/url/: mod.rs  query.rs
src/sim/: mod.rs  str.rs
src/track/: duration.rs  mod.rs
src/track/id/: cleaner.rs  mod.rs  parser.rs
src/tui/: mod.rs
src/tui/main/: layout.rs  mod.rs
src/util/: bytes.rs  error.rs  mime.rs  mod.rs  mp4.rs  regex.rs
src/util/future/: abortable.rs  mod.rs
src/util/io/: mod.rs
src/web/: mod.rs  scraping.rs
(+9 files in other folders)
