[package]
name = "rslizzy"
version = "0.1.0"
description = """
Slizzy is a program and a library to search for tracks and download slider.kz, music2k.com
and zippyshare.com objects."""
authors = ["gahag <gabriel.s.b@live.com>"]
homepage = "https://github.com/gahag/rslizzy"
documentation = "https://github.com/gahag/rslizzy"
repository = "https://github.com/gahag/rslizzy"
readme = "readme.md"
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
edition = "2018"


[dependencies]
# Logging
log = "0.4"
memory_logger = { version = "0.1", features = [ "blocking", "target" ] }

# Command line args
clap = "2.32"

# Filesystem
xdg = "2.2"

# Extensions
anyhow = "1.0"
async-trait = "0.1"
derive_more = "0.99"
enumset = "1.0"
futures = "0.3"
lazy_static = "1.4"
thiserror = "1.0"

# String
trigram = "0.4"
regex = "1.3"

# Config
toml = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web
url = "2.1.1"
scraper = { version = "0.11", default-features = false }
percent-encoding = "2.1"
isahc = "0.9"

# Terminal
tui = "0.9"
termion = "1.5"

# Utils
mime_guess = "2.0"
fasteval = "0.2"


[dev-dependencies]
simple_logger = { version = "1.6", default-features = false } # Logging to stderr for tests.


[profile.release]
lto = true
